<resources>
    <string name="app_name">OneDaily</string>
    <string name="version">v1.0.0</string>
    <string name="book">图书</string>

    <!-- SmartPullableLayout -->
    <string name="smart_ui_pull_down_normal">下拉刷新</string>
    <string name="smart_ui_pull_down_release_able">释放刷新</string>
    <string name="smart_ui_pull_down_release">正在刷新</string>
    <string name="smart_ui_pull_up_normal">上拉加载更多</string>
    <string name="smart_ui_pull_up_release_able">释放进行加载</string>
    <string name="smart_ui_pull_up_release">正在加载中...</string>
    <string name="cancel">取消</string>
    <string name="hot_search">热门搜索</string>
    <string name="lable_change">换一批</string>
    <string name="book_raing">评分</string>
    <string name="book_summary">简介</string>
    <string name="book_catlog">目录</string>
    <string name="book_author">作者简介</string>
    <string name="search_history">搜索历史</string>
    <string name="history_clear">清空</string>
    <string name="gank_category">专题</string>
    <string name="gank_time">时间浏览</string>
    <string name="article_save">保存</string>
    <string name="dialog_link_url">链接</string>
    <string name="dialog_link_title">标题</string>
    <string name="msg_my">我的</string>
    <string name="my_note">我的笔记</string>
    <string name="my_book">我的图书</string>
    <string name="my_notification">推送</string>
    <string name="my_dispotion">功能介绍</string>
    <string name="my_abort">关于</string>
    <string name="my_exit">退出登录</string>
    <string name="note_title">笔记</string>
    <string name="user_login">登录</string>
    <string name="collect_book">我的图书</string>
    <string name="tv_refresh">点击刷新</string>
    <string name="turing_chat">聊天</string>
    <string name="save_image">已保存</string>
    <string name="book_category">图书分类</string>
    <string name="channel_explain">点击可增删/长按并拖拽可排序</string>
    <string name="my_channel">我的分类</string>
    <string name="more_channel">更多分类</string>
    <string name="channel_manage">分类管理</string>
    <string name="more_toast">最多只能选择8个分类</string>
    <string name="about">关于</string>
    <string name="about_msg">
        1.此app为阅读类app，分三个部分：\n
        i.仿知乎日报\n
        ii.使用豆瓣图书API展示图书，提供综合，文学，文化，
        生活四个类型的图书展示（后续提供更改类型功能）。\n
        iii.此外还可以搜索图书，有扫条码和输入书名两种方式。\n
        iV.添加查看笔记。\n\n

        2.使用现在最流行的MVP+RxJvaa+Retrofit。用butterknif注解，使用glide进行图片展示。\n\n

        3.界面风格采用Material Design设计规范.\n\n

        使用到的开源库\n

        RxJava、Retrofit2、okhttp3、Butterknife、Glide、Gson


    </string>
    <string name="tmntduke">tmntduke</string>
    <string name="desc">知乎+豆瓣</string>
    <string name="function_desc">功能描述</string>
    <string name="no_more">没有更多了</string>
    <string name="send_email">意见反馈</string>
    <string name="user_logout">登出成功</string>
    <string name="haveno_email">没有邮件应用</string>
</resources>
