<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/lyNav"
        style="@style/nav_bar_layout">

        <Button
            android:id="@+id/btnBack"
            style="@style/navBackButton"/>

        <TextView
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/book_category"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/channel_explain"
        android:textColor="@color/text_gray"
        android:textSize="16sp"/>

    <TextView
        style="@style/news_channel_sort_title"
        android:text="@string/my_channel"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_my_cate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">
    </android.support.v7.widget.RecyclerView>

    <TextView
        style="@style/news_channel_sort_title"
        android:text="@string/more_channel"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_more_cate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">
    </android.support.v7.widget.RecyclerView>
</LinearLayout>
