<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_cover"
                android:layout_width="match_parent"
                android:layout_height="225dp">

                <ImageView
                    android:id="@+id/img_share"
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/ic_book_share"/>

                <android.support.v7.widget.CardView
                    android:layout_width="110dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:elevation="17dp"
                    android:translationZ="15dp">
                    <ImageView
                        android:id="@+id/img_detail_cover"
                        android:layout_width="110dp"
                        android:layout_height="150dp"
                        tools:src="@drawable/ic_moren"/>
                </android.support.v7.widget.CardView>
            </RelativeLayout>

            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp">

                <TextView
                    android:id="@+id/tv_detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:text="白夜行"/>

                <TextView
                    android:id="@+id/tv_detail_author"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_detail_title"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/text_gray"
                    android:textSize="12sp"
                    tools:text="白夜行"/>

                <TextView
                    android:id="@+id/tv_detail_publish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_detail_author"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/text_gray"
                    android:textSize="12sp"
                    tools:text="白夜行"/>
                <TextView
                    android:id="@+id/tv_detail_publish_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_detail_publish"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/text_gray"
                    android:textSize="12sp"
                    tools:text="白夜行"/>

                <android.support.v7.widget.CardView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:elevation="10dp"
                    android:translationZ="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/book_raing"
                        android:textColor="@color/text_gray"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tv_detail_raing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="22dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                </android.support.v7.widget.CardView>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/book_summary"
                android:textColor="@color/text_gray"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_detail_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/book_author"
                android:textColor="@color/text_gray"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_detail_author_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/book_catlog"
                android:textColor="@color/text_gray"
                android:textSize="14sp"/>

            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_detail_catalog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:maxLines="4"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <ImageView
                    android:id="@+id/img_turn"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_book_turn"/>
            </RelativeLayout>
        </LinearLayout>


    </ScrollView>


</LinearLayout>